# nomadbsd-install-gui

./: CMakeLists.txt  defs.h.in  nomadbsd-install-gui.desktop  nomadbsd-install.in
src/: backend.h  main.cpp  wizard.cpp
